--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,16 @@
 - commits:
+    - subject: Update cache key for `checkDeviceExistsIsFrozen`
+      hash: 4195f1c0c9e93b15ba15336eb6f7769ed013d45c
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Pagan Gazzard
+      nested: []
+  version: 9.1.8
+  title: ""
+  date: 2023-03-09T12:17:08.206Z
+- commits:
     - subject: Extend `resolveOrGracefullyDenyDevices` to also check for frozen status
       hash: 316ca72e4d610f6c45af70a5ac13bd4c3879544e
       body: ""
