Add optional LOGS_HOST env var for log-stream subdomain
Depends-on: https://github.com/balena-io/environment-production/pull/1102
Change-type: minor
Signed-off-by: Christina Ying Wang <christina@balena.io>

--- a/docker-compose.test-custom.yml
+++ b/docker-compose.test-custom.yml
@@ -61,6 +61,7 @@ services:
       IMAGE_STORAGE_SECRET_KEY: SECRET_KEY
       JSON_WEB_TOKEN_EXPIRY_MINUTES: 10080
       JSON_WEB_TOKEN_SECRET: purple
+      LOGS_HOST: logs.balenadev.io
       METRICS_MAX_REPORT_INTERVAL_SECONDS: 3
       MIXPANEL_TOKEN: mixpanel_token
       NUM_WORKERS: 1
