--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -22,6 +22,7 @@ keys = [
 	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
 	"FILES_HOST",
 	"HOST",
+	"TRUST_PROXY",
 	"IMAGE_STORAGE_ACCESS_KEY",
 	"IMAGE_STORAGE_BUCKET",
 	"IMAGE_STORAGE_ENDPOINT",
