--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,21 @@
 - commits:
+    - subject: Fix device heartbeat being stuck to offline when the DB update fails
+      hash: f63d510d775ad64d0636ab24a4e0ddd67045599c
+      body: |
+        If setting the DB value to Online failed then
+        we need to rethrow so that the Redis state is
+        not set to Online, otherwise the device's
+        DB record  will be stuck on its previous
+        heartbeat state forever.
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Thodoris Greasidis
+      nested: []
+  version: 11.6.1
+  title: ""
+  date: 2023-05-04T10:20:10.956Z
+- commits:
     - subject: Update balena/open-balena-base Docker tag to v14.9.1
       hash: 05871e0e82f3f54f5acd800ab24a5ef0660f8dbf
       body: |
